--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -3,17 +3,18 @@ Simply RISC M1 Core ("Mistral") TODO List
 
 Implementation
 --------------
-Memory hierarchy requires at least a Wishbone interface
-and some sort of caches.
+Current implementation lacks separate L1 caches (there's a unified L2 into the DDR Controller).
+Also an INTC (Interrupt Controller) should be required to handle 32 IRQs and pass only one to the CPU.
+The CPU has no interrupt handling at all so it must be added.
 
 
-Functional Verification
------------------------
-The simulation work has been performed by Simone Lunardo and Paolo Piscopo;
-the verification status for each SIMPLE instruction is as follows:
+ISA Functional Verification
+---------------------------
+Several simulations have been performed by Simone Lunardo and Paolo Piscopo;
+the verification status for each instruction is as follows:
 
 - LOAD/STORE
-Common 32-bit LW/SW have been tested and they work.
+Only 32-bit LW/SW have been tested and they work.
 Other sizes are not working.
 Unaligned accesses are not implemented at all.
 
